+ add org.dcm4che.net.AAssociation#putProperty
+ add org.dcm4che.net.AAssociation#getProperty
+ make org.dcm4cheri.data.DcmParserImpl tolerant for redundant
  Sequence Delimiter Items of Sequences with explicit length encoding
+ add org.dcm4che.data.FileMetaInfo#getImplementationClassUID
+ add org.dcm4che.data.FileMetaInfo#getImplementationVersionName
+ add org.dcm4che.dict.Status

CHANGES:
dcm4che API:
+ rename org.dcm4che.net.Factory to org.dcm4che.net.AssociationFactory
+ relax VR value check for most VR types to log warning insteed
  throw IllegalValueException
+ org.dcm4che.data.DcmObject#get??(tag, index)
  return null/0, if index >= vm(), instead throw RuntimeException
+ org.dcm4che.net.AcceptorPolicy: rename map related insert methods from 
    addXX to putXX. Also allows null value -> remove a previous added item
    from the map. -> eliminate redundant removeXXX methodes.
+ org.dcm4che.net.AcceptorPolicy#setAsyncOpsWindow(AsyncOpsWindow) removed,
    use setAsyncOpsWindow(int, int) instead
+ org.dcm4che.net.AcceptorPolicy#addRoleSelection(RoleSelection) ->
    #addRoleSelection(String uid, boolean scu, boolean scp)
+ org.dcm4che.util.SSLContextAdapter:
   make enabledCipherSuites param of SocketFactory instead of Adapter

-------------------------------------------------------------------------------
dcm4che 1.0.2 -  - Changes since dcm4che 1.0.1
-------------------------------------------------------------------------------
DISTRIBUTION:
+ demo -> samples
+ include javadoc

BUG FIXES:
org.dcm4cheri.data
+ Fix DcmObject.putUT (inserted element returned wrong vr(=UL))
+ Fix BaseDatasetImpl.calcLength (ArrayOutOfBoundsException if #groups=8^n)
org.dcm4che.imageio.plugins.DcmMetadataFormat*
  Add missing definitions for "pos" attribute of elements "elm", "item", "frag"
org.dcm4cheri.media:
+ Fix DirBuilderImpl to merge PATIENT/STUDY/SERIES records with
  same primary key
samples/dcmdir:
+ Fix remove operation (ArrayOutOfBoundsException)