@@ -44,6 +44,8 @@ dcm4che API:
 + add org.dcm4che.data.FileMetaInfo#getImplementationClassUID
 + add org.dcm4che.data.FileMetaInfo#getImplementationVersionName
 + add org.dcm4che.dict.Status
++ add org.dcm4che.srom.IconImage
+
 
 CHANGES:
 dcm4che API:
@@ -60,7 +62,9 @@ dcm4che API:
 + org.dcm4che.net.AcceptorPolicy#addRoleSelection(RoleSelection) ->
     #addRoleSelection(String uid, boolean scu, boolean scp)
 + org.dcm4che.util.SSLContextAdapter:
-   make enabledCipherSuites param of SocketFactory instead of Adapter
+   make enabledCipherSuites param of SocketFactory instead of Adapter,
+   add support of pkcs12 keystore
++ org.dcm4che.srom.*: add IconImage param to factory methodes for ImageContent
 
 -------------------------------------------------------------------------------
 dcm4che 1.0.2 -  - Changes since dcm4che 1.0.1
